# Football

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  bandit-report.json  buscador_mercados.py  coverage.xml  flake8-report.json  partidos_alta_probabilidad.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  code-cleaner.yml  workflow.yml
models/: __init__.py  dixon_coles.py
